@@ -7,6 +7,7 @@
     "LibraryMake"
   ],
   "depends": [
+    "DOM",
     "XML",
     "Method::Also",
     "File::Temp"
