@@ -1,16 +1,19 @@
 use LibXML::Node;
 use LibXML::_StringyNode;
+use DOM;
 
 #| LibXML CDATA Section nodes
 unit class LibXML::CDATA
     is repr('CPointer')
     is LibXML::Node
-    does LibXML::_StringyNode;
+    does LibXML::_StringyNode
+    does DOM::CDATASection;
 
 use LibXML::Raw;
 use NativeCall;
 method raw { nativecast(xmlCDataNode, self) }
 method content is rw handles<substr substr-rw> { $.raw.content };
+method splitText { die X::NYI.new }
 
 =begin pod
 =head2 Synopsis
