@@ -1,12 +1,13 @@
-
 use LibXML::Node;
 use LibXML::_ParentNode;
+use DOM;
 
 #| LibXML's DOM L2 Document Fragment Implementation
 unit class LibXML::DocumentFragment
     is repr('CPointer')
     is LibXML::Node
-    does LibXML::_ParentNode;
+    does LibXML::_ParentNode
+    does DOM::DocumentFragment;
 
 =begin pod
     =head2 Synopsis
