@@ -1,8 +1,10 @@
 use LibXML::Node;
+use DOM;
 
 unit class LibXML::Entity
     is repr('CPointer')
-    is LibXML::Node;
+    is LibXML::Node
+    does DOM::Entity;
 
 use LibXML::Raw;
 use NativeCall;
@@ -11,5 +13,9 @@ multi method new(Str:D :$name!, Str:D :$content!, Str :$external-id, Str :$inter
     my xmlEntity:D $native .= create: :$name, :$content, :$external-id, :$internal-id;
     self.box($native, :$doc);
 }
+
+method publicId { $.raw.ExternalID }
+method systemId { $.raw.SystemID }
+method notationName { $.nodeName }
 
 method raw { nativecast(xmlEntity, self) }
