@@ -1,26 +1,28 @@
 #| Native enumerations
 unit module LibXML::Enums;
 
+use DOM :NodeType;
+
 enum xmlElementType is export (
    XML_ATTRIBUTE_DECL => 16,
-   XML_ATTRIBUTE_NODE => 2,
-   XML_CDATA_SECTION_NODE => 4,
-   XML_COMMENT_NODE => 8,
+   XML_ATTRIBUTE_NODE => +ATTRIBUTE_NODE,
+   XML_CDATA_SECTION_NODE => +CDATA_SECTION_NODE,
+   XML_COMMENT_NODE => +COMMENT_NODE,
    XML_DOCB_DOCUMENT_NODE => 21,
-   XML_DOCUMENT_FRAG_NODE => 11,
-   XML_DOCUMENT_NODE => 9,
-   XML_DOCUMENT_TYPE_NODE => 10,
+   XML_DOCUMENT_FRAG_NODE => +DOCUMENT_FRAGMENT_NODE,
+   XML_DOCUMENT_NODE => +DOCUMENT_NODE,
+   XML_DOCUMENT_TYPE_NODE => +DOCUMENT_TYPE_NODE,
    XML_DTD_NODE => 14,
    XML_ELEMENT_DECL => 15,
-   XML_ELEMENT_NODE => 1,
+   XML_ELEMENT_NODE => +ELEMENT_NODE,
    XML_ENTITY_DECL => 17,
-   XML_ENTITY_NODE => 6,
-   XML_ENTITY_REF_NODE => 5,
+   XML_ENTITY_NODE => +ENTITY_NODE,
+   XML_ENTITY_REF_NODE => +ENTITY_REFERENCE_NODE,
    XML_HTML_DOCUMENT_NODE => 13,
    XML_NAMESPACE_DECL => 18,
    XML_NOTATION_NODE => 12,
-   XML_PI_NODE => 7,
-   XML_TEXT_NODE => 3,
+   XML_PI_NODE => +PROCESSING_INSTRUCTION_NODE,
+   XML_TEXT_NODE => +TEXT_NODE,
    XML_XINCLUDE_END => 20,
    XML_XINCLUDE_START => 19,
 );
