@@ -178,7 +178,7 @@ EOF
 EOF
     my $dtd = $doc.internalSubset;
 
-    dies-ok { $dtd.hasAttributes }, 'hasAttributes N/A to DTD nodes';
+    nok $dtd.hasAttributes, 'hasAttributes';
     dies-ok { $dtd.attributes }, 'attributes N/A to DTD nodes';
 }
 
